--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "dompurify": "^3.1.5",
     "embla-carousel-react": "^8.1.3",
     "geist": "^1.3.0",
     "lucide-react": "^0.377.0",
@@ -39,6 +40,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.51.5",
     "react-redux": "^9.1.2",
+    "react-render-html": "^0.6.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8",
