--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "dompurify": "^3.1.5",
     "embla-carousel-react": "^8.1.3",
     "geist": "^1.3.0",
+    "html-react-parser": "^5.1.10",
     "lucide-react": "^0.377.0",
     "next": "14.2.3",
     "next-themes": "^0.3.0",
@@ -40,7 +41,6 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.51.5",
     "react-redux": "^9.1.2",
-    "react-render-html": "^0.6.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8",
