Added User Account Setup

--- a/.env
+++ b/.env
@@ -5,6 +5,8 @@ NEXT_PUBLIC_APPWRITE_API_KEY=85203ec5ad0bfbf0bcc0bb6ad9d72d0c24f878e5b7e1411eab6
 NEXT_PUBLIC_APPWRITE_DB=6671608f000cdc4ae3ee
 NEXT_PUBLIC_APPWRITE_EMAILS_COLLECTION=66716097000a9a79a331
 NEXT_PUBLIC_APPWRITE_ROLLUPS_COLLECTION=6671622a0021078dc174
+NEXT_PUBLIC_APPWRITE_MAILBOX_COLLECTION=66744080003da99284f8
 NEXT_PUBLIC_SITE_URL=http://uprolld.email
-
+NEXT_MAILBOX_API_ENDPOINT=https://mail.uprolld.email:8443/api/v1
 NEXT_PUBLIC_COM_DOMAIN=http://uprolld.com
+MAILCOW_API_KEY=B1ED4E-15E229-B9DB9C-ED0029-295466
