--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "cmdk": "^1.0.0",
     "dompurify": "^3.1.5",
     "embla-carousel-react": "^8.1.3",
+    "framer-motion": "^11.2.11",
     "geist": "^1.3.0",
     "html-react-parser": "^5.1.10",
     "lucide-react": "^0.377.0",
